-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.0, Lustre 2.13.0, Lustre 2.14.0
-
None
-
3
-
9223372036854775807
There are actually two issues with sanity test_80 as see here in the suite_log to https://testing.whamcloud.com/test_sets/92b52b08-05c5-11ea-9487-52540065bddc
== sanity test 80: Page eviction is equally fast at high offsets too ================================ 19:09:39 (1573585779)
CMD: trevis-34vm3 lctl get_param -n obdfilter.*.sync_on_lock_cancel
trevis-34vm3: error: get_param: param_path 'obdfilter/*/sync_on_lock_cancel': No such file or directory
CMD: trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3 lctl set_param obdfilter.*.sync_on_lock_cancel=never
pdsh@trevis-34vm1: gethostbyname("trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3") failed
1+0 records in
1+0 records out
1048576 bytes (1.0 MB) copied, 0.00475709 s, 220 MB/s
CMD: trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3 lctl set_param obdfilter.*.sync_on_lock_cancel=
pdsh@trevis-34vm1: gethostbyname("trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3trevis-34vm3") failed
One issue is that it looks like the obdfilter.*.sync_on_lock_cancel parameter no longer exists and the host name composed in the test is problematic.
The test does not fail when it hits these issues, but most likely, the test is not working as intended.